toolbar stretch only init iframe url once displayed color bar in safari height corrected.

--- a/trunk/IOSchedGWT/war/IOSchedGWT.css
+++ b/trunk/IOSchedGWT/war/IOSchedGWT.css
@@ -215,6 +215,7 @@ h1 {
 .colorBar {
 	background-image:url('images/colors.png');
     background-repeat:repeat-x;
+    height:6px;
 }
 
 #Map-scrollpanel {
